--- a/petstore.yml
+++ b/petstore.yml
@@ -7,7 +7,7 @@ info:
 servers:
   - url: http://petstore.swagger.io/v1
 paths:
-  /pets:
+  /petz:
     get:
       summary: List all pets
       operationId: listPets
